--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
 
   test_image:
     docker:
-      - image: $DOCKER_USERNAME/ruby:2.2.4-caseyli23:ruby:2.2.4-node-browsers
+      - image: $DOCKER_USERNAME/ruby-2.2.4-node-browsers:ruby-2.2.4-node-browsers
         environment:
           <<: *image_config
 
