--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ image_config: &image_config
 
   IMAGE_NAME: ruby-2.2.4-node-browsers
 
-  IMAGE_TAG: ruby-2.2.4-node-browsers
+  IMAGE_TAG: 1.0
 
   # NOTE: if you're modifying this config.yml file manually
   # rather than using the included setup script,
@@ -54,7 +54,7 @@ jobs:
 
   test_image:
     docker:
-      - image: $DOCKER_USERNAME/ruby-2.2.4-node-browsers:ruby-2.2.4-node-browsers
+      - image: $DOCKER_USERNAME/ruby-2.2.4-node-browsers:1.0
         environment:
           <<: *image_config
 
