--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ image_config: &image_config
   # either as project-specific environment variables
   # or as resources in your organization's org-global Context
 
-  IMAGE_NAME: ruby-2.2.4-node-browsers
+  IMAGE_NAME: ruby
 
-  IMAGE_TAG: 1.3
+  IMAGE_TAG: 2.5.5-node-browsers
 
   # NOTE: if you're modifying this config.yml file manually
   # rather than using the included setup script,
@@ -15,7 +15,7 @@ image_config: &image_config
 
   LINUX_VERSION: UBUNTU_TRUSTY
 
-  RUBY_VERSION_NUM: 2.2.4
+  RUBY_VERSION_NUM: 2.5.5
 
   NODE_VERSION_NUM: 9.11.1
 
