--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ image_config: &image_config
 
   IMAGE_NAME: ruby
 
-  IMAGE_TAG: 2.5.5-node-browsers
+  IMAGE_TAG: 2.5.5-node-10.16.0-browsers
 
   # NOTE: if you're modifying this config.yml file manually
   # rather than using the included setup script,
@@ -17,7 +17,7 @@ image_config: &image_config
 
   RUBY_VERSION_NUM: 2.5.5
 
-  NODE_VERSION_NUM: 9.11.1
+  NODE_VERSION_NUM: 10.16.0
 
   # PYTHON_VERSION_NUM: # pick a version from https://python.org/ftp/python
 
