--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
 
   test_image:
     docker:
-      - image: $DOCKER_USERNAME/ruby-2.2.4-node-browsers:1.3
+      - image: $DOCKER_USERNAME/ruby:2.5.5-node-10.16.0-browsers
         environment:
           <<: *image_config
 
